--- a/css/gui.css
+++ b/css/gui.css
@@ -1,199 +1,70 @@
 .button, button, select {
-    display: inline-block;
-	padding: 5px 10px;
-	margin: 2px;
-	color: white;
-	border: 1px solid #70A5CB;
-	text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.3);
-	border-radius:      20px;
-	box-shadow:         2px 2px 6px #ccc;
-	cursor: hand;
-	cursor: pointer;
-	background: #89BADD;
-	box-shadow:
-		inset -20px -20px 40px -20px #4c92c4,
-		inset  20px  20px 40px -20px #b1dbed;
+    display: inline-block; /* well just screw browsers that don't support this */
+    font-weight: bold;
+    padding: 5px 15px;
+    margin: 2px;
+    color: white;
+
+    border: 1px solid #70A5CB;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.3);
+
+
+    border-radius:      20px;
+
+    box-shadow:         2px 2px 6px #ccc;
+
+    cursor: hand;
+    cursor: pointer;
+
+    background: #89BADD;
+    box-shadow:
+        inset -20px -20px 40px -20px #4c92c4,
+        inset  20px  20px 40px -20px #b1dbed;
 }
-a.button:visited {
-	color: white;
-}
+
 .button:focus, button:focus, select:focus,
 .button:hover, button:hover, select:hover {
-	background: #94C1DE;
-	box-shadow:
-		inset -20px -20px 40px -20px #61a4d3,
-		inset  20px  20px 40px -20px #c0e7f7;
+    background: #94C1DE;
+    box-shadow:
+        inset -20px -20px 40px -20px #61a4d3,
+        inset  20px  20px 40px -20px #c0e7f7;
 }
 .button:active, button:active, select:active {
-	background: #89BADD;
-	box-shadow:
-		inset  20px  20px 40px -20px #4c92c4,
-		inset -20px -20px 40px -20px #b1dbed;
+    background: #89BADD;
+    box-shadow:
+        inset  20px  20px 40px -20px #4c92c4,
+        inset -20px -20px 40px -20px #b1dbed;
 }
 .button.disabled, button:disabled, select:disabled {
-	cursor: default;
-	border-color: #8A8A8A;
-	background: #D3DBE1;
-	box-shadow:
-		inset -20px -20px 40px -20px #999FA3,
-		inset  20px  20px 40px -20px #D3DBE1;
-}
-
-#ponylist button,
-table button,
-button.remove,
-button.increase,
-button.decrease {
-	padding: 3px 9px;
-	border-radius: 5px;
-}
-
-textarea.code {
-	width: 628px;
-}
-
-pre.code {
-	margin-left: 20px;
-	margin-right: 20px;
-	padding: 15px;
-	border-radius: 20px;
-	color: white;
-	background: #333333;
-	background: rgba(0,0,0,0.8);
-	overflow: auto;
-}
-.keyword {
-	font-weight: bold;
-	color: #B8A36E;
-}
-.literal {
-	color: #F69B9B;
-}
-.comment {
-	color: #7C7C7C;
-}
-
-#embedcodewrap, #iframewrap {
-	width: 200px;
-}
-#embedcode, #iframe {
-	width: 100%;
-	overflow: hidden;
-}
-
-
-#ponylist {
-	margin: auto;
-	width: 410px;
-	height: 400px;
-	overflow: auto;
-	list-style: none;
-	padding: 30px;
-	box-shadow: inset 0 0 10px rgba(0,0,0,0.6);
-	border-radius: 20px;
-}
-
-#ponylist li {
-	margin-bottom: 40px;
-}
-
-input.number {
-	text-align: right;
-}
-
-.ponyname {
-	font-weight: bold;
-}
-
-.ponyimg {
-	min-width: 200px;
-	text-align: center;
-	display: inline-block;
-}
-#catselect {
-	position: absolute;
-	background: white;
-	cursor: hand;
-	cursor: pointer;
-}
-#catlist {
-	display: inline;
-}
-#catlist, #catselect {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-#catselect {
-	border-radius:      10px;
-	box-shadow:      2px 2px 12px rgba(0,0,0,0.4);
-	padding: 3px;
-}
-#catselect li {
-	padding: 3px 5px;
-	border-radius: 10px;;
-}
-#catselect li:hover {
-	background: #458BC1;
-	color: white;
-}
-#catlist li {
-	padding: 2px 5px;
-	margin: 2px;
-	display: inline-block;
-	border-radius: 10px;
-	background: #D3DBE1;
-	border: 1px solid #8A8A8A;
-}
-#catlist li, #nocatadded {
-	font-size: 0.85em;
-}
-.delcat {
-	cursor: hand;
-	cursor: pointer;
-	border-radius: 8px;
-	padding: 0 2px;
-}
-.delcat:hover {
-	background: #8A8A8A;
-	color: #D3DBE1;
-}
-#nocatadded, li#allcatsadded {
-	color: #A1B4C3;
-}
-li#allcatsadded {
-	cursor: default;
-}
-li#allcatsadded:hover {
-	color: #A1B4C3;
-	background: white;
-}
-p, #filterwrapper {
-	margin-top: 1em;
-	margin-bottom: 1em;
+    cursor: default;
+    border-color: #8A8A8A;
+    background: #D3DBE1;
+    box-shadow:
+        inset -20px -20px 40px -20px #999FA3,
+        inset  20px  20px 40px -20px #D3DBE1;
 }
 
 #paddock-front, #paddock-back, #paddock-left {
-	left: 0px;
+    left: 0px;
 }
 #paddock-front, #paddock-back, #paddock-left, #paddock-right {
-	position: fixed;
-	height: 60px;
+    position: fixed;
+    height: 60px;
 }
 #paddock-front {
-	bottom: 0px;
-	background: transparent url("../images/paddock_front.gif") repeat-x 100px bottom;
-	z-index: 9008000;
+    bottom: 0px;
+    background: transparent url("../images/paddock_front.gif") repeat-x 100px bottom;
+    z-index: 9008000;
 }
 #paddock-back {
-	top: 0px;
-	background: transparent url("../images/paddock_front.gif") repeat-x top;
+    top: 0px;
+    background: transparent url("../images/paddock_front.gif") repeat-x top;
 }
 #paddock-left, #paddock-right {
-	width: 16px;
-	height: 100%;
-	background: transparent url("../images/paddock_side.gif") repeat-y top left;
+    width: 16px;
+    height: 100%;
+    background: transparent url("../images/paddock_side.gif") repeat-y top left;
 }
 #paddock-right {
-	right: 0px;
+    right: 0px;
 }
