--- a/css/form.css
+++ b/css/form.css
@@ -30,25 +30,6 @@ h3{
     border-radius: 10px;
 }
 
-.align label {
-    float: left;
-    width: 10rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    text-align: left;
-}
-
-.align input {
-    margin-bottom: .5em;
-    transition: all 500ms;
-    width: 12.25rem;
-}
-
-.align input:focus{
-    width: 17rem;
-}
-
-
 #charnames{
     text-align: center;
     width: 13.25rem;
@@ -56,148 +37,34 @@ h3{
     margin-bottom: 0.5rem;
 }
 
+#item_button, #weap_button, #spell_button{
+    margin-bottom: 1rem;
+    margin-left: 19%;
+    width: 50%;
+}
+
 textarea{
-    height: 1.25rem;
-    width: 12.25rem;
-    transition: all 1s;
+    width: 50%;
 }
 
-textarea:focus{ 
-    width: 15rem;
-    height: 5rem;
-    max-height: 10rem;
+.single-form-bg{
+    background-color: #f1edf8;
+    padding: 2.5%;
+    border: 2px solid black;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.tooltip{
-    color: black;
+.single-form{
+    background-color: #c5b5e3;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    border: 1.5px solid black;
 }
 
-.error{
-    color: red;
-}
-
-#spellname, #weapname, #itemname{
-    margin-top: 1%;
-}
-
-#spellnamelabel, #weapnamelabel, #itemnamelabel{
-    margin-top: 1.5%;
-}
-
-#newability, #newweap, #newitem{
-    background: #fff; 
-    border-radius: 3px;
-    border: 2px solid #aaa;
-}
-
-
-/*  Style rules for the spell, ability and power entry */
-#spell{
-    margin: 10% 10% 5% 10%;
-    border:2px solid #777;
-    background: #ccc;
-    border-radius: 3px;
-    padding: 5px;
-}
-
-#spell_button{
-    margin-top: 20px;
-    margin-left: 25%;
-    margin-bottom: 25px;
-    width: 15rem;
-    height: 2rem;
-}
-
-
-/* Style rules for the weapons entry.*/
-#weap_button{
-    margin-top: 20px;
-    margin-left: 35%;
-    width: 10rem;
-    height: 2rem;
-}
-
-#weapons{
-    margin: 5% 15% 20% 15%;
-    border:2px solid #777;
-    background: #ccc;
-    border-radius: 3px;
-    padding: 5px;
-}
-
-
-/* Style rules for the item entry*/
-#item_button{
-    margin-top: 20px;
-    margin-left: 35%;
-    width: 10rem;
-    height: 2rem;
-}
-
-#items{
-    margin: 10% 5% 5% 10%;
-    border:2px solid #777;
-    background: #ccc;
-    border-radius: 3px;
-    padding: 5px;
-}
-
-/* Style rules for the character data entry. */
-#tabs{
-    margin: 10% 5% 5% 10%;
-}
-
-.important{
-    color: red;
-}
-
-#char_button{
-    width: 15rem;
-    height: 2rem;
-    margin-top: 1rem;
-    margin-left: 25%;
-}
-
-#appearance_button{
-    margin-top: 1rem;
-    margin-left: 35%;
-    margin-left: 20%;
-    width: 20rem;
-    height: 2rem;
-}
-
-#outfit_button{
-    margin-left: 25%;
-    margin-right: 35%;
-    margin-top: 1rem;
-    width: 15rem;
-    height: 2rem;
-}
-
-#pers_button{
-    margin-left: 20%;
-    margin-right: 30%;
-    margin-top: 1rem;
-    width: 20rem;
-    height: 2rem;
-}
-
-#stat_button{
-    margin-top: 1rem;
-    margin-left: 25%;
-    margin-right: 30%;
-    width: 15rem;
-    height: 2rem;
-}
-
-#racedesc:focus{
-    width: 50%;    
-    max-height: 25%;
-}
-
-#race_button{
-    margin-left: 20%;
-    margin-right: 30%;
-    width: 20rem;
-    height: 2rem;
+@media (max-width:600px) {
+    textarea{
+        margin-left: 1rem;   
+        width: 85%;
+    }
 }
