--- a/css/font-awesome-min.css
+++ b/css/font-awesome-min.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: 'FontAwesome';
-    src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
-    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype');
+    src: url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0');
     font-weight: normal;
     font-style: normal
 }
@@ -10,14 +9,11 @@
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
-    text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale
 }
 
-.fa-remove:before,
-.fa-close:before,
-.fa-times:before {
+.fa-remove:before {
     content: "\f00d"
 }
 
@@ -25,20 +21,6 @@
     content: "\f0d7"
 }
 
-.fa-caret-up:before {
-    content: "\f0d8"
-}
-
-.fa-caret-left:before {
-    content: "\f0d9"
-}
-
-.fa-caret-right:before {
-    content: "\f0da"
-}
-
-.fa-navicon:before,
-.fa-reorder:before,
 .fa-bars:before {
     content: "\f0c9"
 }
