--- a/css/viewchar.css
+++ b/css/viewchar.css
@@ -11,6 +11,14 @@ main{
     border:1px solid black;
 }
 
+.hiddendiv{
+    display: none;
+}
+
+.visiblediv{
+    display:block;
+}
+
 .textdisplay{
     margin-left: 20%;
     border:2px dotted black;
