All character info can now be added and displayed!
Removed unused PHP )it'll come back later probably), and got more working.

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -23,11 +23,17 @@
     font-size: inherit;
 }
 
-.fa-remove:before { content: "\f00d"; }
+.fa-remove:before {
+    content: "\f00d";
+}
 
-.fa-caret-down:before { content: "\f0d7"; }
+.fa-caret-down:before {
+    content: "\f0d7";
+}
 
-.fa-bars:before { content: "\f0c9"; }
+.fa-bars:before {
+    content: "\f0c9";
+}
 
 
 /* Main page content */
@@ -68,11 +74,17 @@ footer{
 }
 
 /* The side nav*/
-body::-webkit-scrollbar { width: 0.25rem; }
+body::-webkit-scrollbar {
+    width: 0.25rem;
+}
 
-body::-webkit-scrollbar-track { background: #1e1e24; }
+body::-webkit-scrollbar-track {
+    background: #1e1e24;
+}
 
-body::-webkit-scrollbar-thumb { background: #6649b8; }
+body::-webkit-scrollbar-thumb {
+    background: #6649b8;
+}
 
 .nav-hr{
     margin-left: 0.5em;
@@ -112,11 +124,13 @@ body::-webkit-scrollbar-thumb { background: #6649b8; }
         margin-top: 10%;
         margin-left: 1em;
     }
-    
+
     #minimenu{
         margin-left: 1em;
         margin-top: 1em;
     }
-    
-    #userdisplay{ display:none; }
+
+    #userdisplay{
+        display:none;
+    }
 }
