Added some content I forgot about.

--- a/css/w3-min.css
+++ b/css/w3-min.css
@@ -480,6 +480,10 @@ iframe{
     margin: 0% 2.55%;
 }
 
+.chardisplay{
+    margin-top: 1.5rem;    
+}
+
 .data-entry{
     margin-left: 0.75rem;
     width: 15rem;
